no whitespaces in chords-only. Regenerate correct
Needs sass compiler on local!

--- a/songsapp/static/songsapp/commons.sass
+++ b/songsapp/static/songsapp/commons.sass
@@ -31,7 +31,7 @@
   font-weight: bold
 
 .chords_line_no_pre
-  white-space: nowrap !important
+  white-space: nowrap
 
 //.songapp_box
 //  min-height: 30px
